--- a/11 Feb Assignment 6/Real Estate/style.css
+++ b/11 Feb Assignment 6/Real Estate/style.css
@@ -1,407 +1,358 @@
-/* css reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Manrope";
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Manrope";
 }
 
-/* removing default styling of li items */
-li {
-  list-style: none;
+body{
+    background-color: var(--primary-color);
+}
+/* Variables */
+
+:root{
+    --primary-color:#f6f8fa;
+    --secondary-color:#6663e9;
 }
 
-/* removing the default decoration of a tags */
-a {
-  text-decoration: none;
+ul{
+    list-style-type: none;
+}
+a{
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 18px;
+    color: #fff;
+}
+button{
+    padding: 10px 30px;
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    background-color: var(--secondary-color);
+    border:none;
+    border-radius: 30px;
+}
+/* --------------- Header --------------- */
+
+header{
+    height: 125vh;
+    background: linear-gradient(rgb(0 0 0 / 0.5),rgb(0 0 0 /0.5)),url(./Photos/mainBackground.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 15%;
+}
+header h1{
+    background: transparent;
+}
+header hr{
+    margin: 0 7%;
+}
+nav ul{
+    display: flex;
+    gap: 60px;
+}
+header img[alt="logo-icon1"]{
+    height: 45px;
+}
+header h1{
+    font-size: 70px;
+    color: white;
+    margin: 80px 0 30px 0;
+    width: 40%;
+}
+header p{
+    font-size: 20px;
+    color: white;
+    margin-bottom: 25px;
+    width: 30%;
+}
+header h1,header p,header button{
+    margin-left: 10%;
 }
 
-/* giving default design to every button */
-button {
-  background: #6663e9;
-  border: none;
-  border-radius: 30px;
-  padding: 10px 30px;
-  color: #ffffff;
-  font-weight: 800;
-  font-size: 18px;
+/*  ---------------- Logo Images Section ------------ */
+
+.logo-images{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #ffff;
+    padding: 80px 0px;
+    margin: 0 40px;
+    border-radius: 30px;
+    position: relative;
+    bottom: 100px;
 }
 
-body {
-  background-color: #f6f8fa;
+/* --------------- Cards Section --------------- */
+
+.cards-section > h1{
+    text-align: center;
+    font-size: 60px;
+    padding-bottom: 100px;
+}
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: var(--primary-color);
+}
+/* Designing card image */
+.card img{
+    border-radius: 20px;
+    height: 400px;
+    width: 370px;
 }
 
-header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./Photos/mainBackground.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 125vh;
-  position: relative;
+/* Designing Card */
+.card{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 30vw;
+    justify-content: end;
+    align-items: center;
+    position: relative;
+    margin-bottom: 40px;
 }
 
-/* designing the navigation menu */
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 25px 0;
+/* Designing Card details */
+.card-details{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #fff;
+    display: flex;
+    height: 120px;
+    width: 330px;
+    border-radius: 20px;
+    position: relative;
+    bottom: 70px;
+}
+.card-details div{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    height: 100%;
+}
+.card-details button{
+    font-weight: 800;
+    height: 50px;
 }
 
-nav img {
-  height: 45px;
-  width: 120px;
+.card-details div h1{
+    margin-bottom: 10px;
+    font-size: 25px;
+}
+.card-details div p{
+    color: var(--secondary-color);
+    font-weight: 800;
+    font-size: 20px;
 }
 
-nav ul {
-  display: flex;
-  align-items: center;
+/* Positioning individual cards */
+.card:nth-child(2){
+    top: 30px;
+}
+.card:nth-child(3){
+    top: 60px;
+}
+.card:nth-child(4){
+    top: 60px;
+}
+.card:nth-child(5){
+    top: 30px;
+}
+.card:nth-child(6){
+    top: 0px;
+}
+.card:nth-child(7){
+    top: 0px;
+}
+.card:nth-child(8){
+    top: 30px;
+}
+.card:nth-child(9){
+    top: 60px;
 }
 
-nav ul li a {
-  color: #ffffff;
-  margin-right: 50px;
-  font-size: 18px;
+/* ------------ Features Section ------------ */
+.features-section h1{
+    font-size: 60px;
+    font-weight: 800;
+}
+.features-section p{
+    font-size: 18px;
 }
 
-hr {
-  margin: 0 100px;
+/* Designing First feature */
+.first-feature{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-/* designing the div inside the header */
-header div {
-  color: #ffffff;
-  margin-left: 150px;
-  margin-top: 85px;
+.first-feature div{  
+    width: 50%;
 }
-
-header div h1 {
-  font-size: 72px;
-  margin-bottom: 30px;
-}
-
-header div p {
-  font-size: 18px;
-  margin-bottom: 30px;
-  font-weight: 500;
-  width: 410px;
-}
-
-/* designing the multiple logos box */
-.my-logos {
-  background-color: #fff;
-  margin: 0 35px;
-  height: 190px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  border-radius: 30px;
-  position: relative;
-  bottom: 100px;
-}
-
-.my-logos img {
-  width: 156px;
-  height: 38px;
-}
-
-/* designing the wrapper section of the cards */
-.cards-wrapper-section h1 {
-  font-weight: 800;
-  font-size: 60px;
-  text-align: center;
-  letter-spacing: 0.01em;
-}
-
-.cards-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 50px;
-  position: relative;
-}
-
-/* designing the card image */
-.card {
-  flex-basis: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-/* giving different margin top value to position cards */
-.cards-wrapper div:nth-child(2) {
-  margin-top: 50px;
-}
-.cards-wrapper div:nth-child(3) {
-  margin-top: 100px;
-}
-.cards-wrapper div:nth-child(4) {
-  margin-top: 160px;
-}
-.cards-wrapper div:nth-child(5) {
-  margin-top: 100px;
-}
-.cards-wrapper div:nth-child(6) {
-  margin-top: 40px;
-}
-.cards-wrapper div:nth-child(7) {
-  margin-top: 40px;
-}
-.cards-wrapper div:nth-child(8) {
-  margin-top: 100px;
-}
-.cards-wrapper div:nth-child(9) {
-  margin-top: 160px;
-}
-
-.card img {
-  width: 366px;
-  height: 400px;
-  border-radius: 20px;
-}
-
-/* designing the card box of card */
-.card-box {
-  width: 326px;
-  height: 121px;
-  border-radius: 20px;
-  background: #ffffff;
-  box-shadow: 0px 4px 120px rgba(58, 86, 78, 0.2);
-  position: absolute;
-  bottom: -60px;
-  padding: 15px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card-box button {
-  font-weight: 800;
-  font-size: 15px;
-  width: 114px;
-  height: 52px;
-}
-
-.card-box div h3 {
-  font-weight: 700;
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.card-box div p {
-  font-weight: 800;
-  font-size: 20px;
-  color: #6663e8;
-  text-shadow: 0px 4px 60px rgba(0, 0, 0, 0.05);
-}
-
-/* designing both the features section of the website */
-.features-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 250px;
-}
-
-.features-section div {
-  width: 50%;
-}
-
-.first-feature-section div:first-child img:first-child {
-  position: absolute;
-  left: -80px;
-  z-index: -1;
-  width: 726px;
-  height: 456px;
-}
-
-.features-section div:first-child img:last-child {
-  position: relative;
-  width: 405px;
-  height: 405px;
-  border-radius: 51px;
-  bottom: 55px;
-  left: 110px;
-}
-
-/* designing the second div of feature box */
-.features-section h1 {
-  font-weight: 800;
-  font-size: 60px;
-  letter-spacing: 0.01em;
-  margin-bottom: 30px;
-}
-
-.features-section p {
-  font-weight: 500;
-  font-size: 18px;
-  color: #585c65;
-  margin-bottom: 40px;
-  max-width: 80%;
-}
-
-.features-section button {
-  font-weight: 700;
-}
-
-/* designing the second feature section */
-.second-feature-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.second-feature-section div {
-  width: 50%;
-}
-
-.second-feature-section div:last-child{
+.first-feature div:first-child{   
     position: relative;
 }
-
-.second-feature-section div:last-child img:first-child {
-  position: absolute;
-  right: 0;
-  width: 726px;
-  height: 456px;
-  bottom: -220px;
+.first-feature div  img:first-child{
+    position: relative;
+    left: -50px;
+    height: 456px;
+    width: 659px;
+}
+.first-feature div  img:last-child{
+    position: absolute;
+    left: 106px;
+    top: -50px;
+    height: 405px;
+    width: 405px;
+    border-radius: 60px;
 }
 
-.second-feature-section div:last-child img:last-child {
-  position: absolute;
-  width: 405px;
-  height: 405px;
-  border-radius: 51px;
-  right: 135px;
-  bottom: -110px;
+.first-feature div:last-child h1,
+.first-feature div:last-child h1,
+.first-feature div:last-child p{
+    margin-bottom: 30px;
+    width: 80%;
 }
 
-.second-feature-section div:first-child {
-  padding: 0 50px;
+/* Designing Second feature */
+.second-feature{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.second-feature div:last-child{   
+    position: relative;
+}
+.second-feature div  img:first-child{
+    height: 465px;
+    width: 718px;
+}
+.second-feature div  img:last-child{
+    position: absolute;
+    right: 127px;
+    bottom: 115px;
+    height: 405px;
+    width: 405px;
+    border-radius: 60px;
+}
+.second-feature div:first-child button{
+    margin-left: 50px;
+}
+.second-feature div:first-child h1,
+.second-feature div:first-child p{
+    margin-bottom: 30px;
+    margin-left: 50px;
+    width: 80%;
 }
 
-.second-feature-section div:first-child h1 {
-  width: 90%;
+/*  --------------- Newsletter Section ------------- */
+.newsletter{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--secondary-color);
+    border-radius: 60px;
+    margin: 40px 5%;
+    padding: 70px;
+    color: #fff;
+    text-align: center;
+}
+.newsletter h1{
+    font-size: 60px;
+    font-weight: 800;
+    margin-bottom: 30px;
+    width: 75%;
+}
+.newsletter p{
+    font-size: 18px;
+    width: 65%;
+    margin-left: 80px;
+    margin-bottom: 30px;
+}
+.mail{
+    display: flex;
+    justify-content: space-around;
+    height: 60px;
+    width: 650px;
+}
+.mail div{
+    display: flex;
+    gap: 20px;
+    padding-left: 20px;
+    border-radius: 30px;
+    background-color: #5654d1;
+    align-items: center;
+    width: 70%;
+}
+.mail input{
+    background-color: transparent;
+    border:none;
+}
+.mail img{
+    height: 25px;
+    width: 25px;
+}
+.mail button{
+    background-color: #fff;
+    color: var(--secondary-color);
+    font-weight: 800;
+    padding: 10px 40px;
 }
 
-/* designing the newsletter section */
-.newsletter {
-  margin: 100px 70px;
-  background: #6663e9;
-  box-shadow: 0px 4px 60px rgba(0, 0, 0, 0.05);
-  border-radius: 70px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-  padding: 70px 0;
-  color: #ffffff;
-  text-align: center;
+/* --------- Footer Section -------------- */
+
+/* Footer left section */
+footer{
+    display:flex;
+    justify-content: space-between;
+    margin: 100px 8%;
+}
+.footer-left{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: flex-start;
+}
+footer img[alt="logo-icon2"]{
+    height: 45px;
+}
+.footer-left p{
+    width: 55%;
+    font-size: 18px;
+}
+.social img{
+    margin-right: 20px;
+    height: 45px;
+    width: 45px;
 }
 
-.newsletter h1 {
-  font-weight: 800;
-  font-size: 60px;
+/* Footer right section  */
+.footer-right{
+    display: flex;
+    gap: 100px;
 }
-
-.newsletter p {
-  font-weight: 400;
-  font-size: 18px;
-  width: 55%;
+.footer-right ul li{
+    line-height: 45px;
 }
+.footer-right ul li a{
+    color: #000;
+    font-weight: 400;
+    font-size: 16px;
 
-/* designing the form */
-.newsletter form {
-  display: flex;
-  align-items: center;
-  gap: 20px;
 }
-
-.newsletter form div {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  background: #5654d1;
-  border-radius: 40px;
-  width: 468px;
-  height: 61px;
-  padding: 0 20px;
-}
-
-.newsletter form input {
-  background-color: transparent;
-  border: none;
-}
-
-.newsletter form button {
-  background: #ffffff;
-  box-shadow: 0px 4px 60px rgba(0, 0, 0, 0.05);
-  border-radius: 40px;
-  width: 174px;
-  height: 61px;
-  color: #6663e9;
-}
-
-/* designing the footer area */
-footer {
-  display: flex;
-  align-items: flex-start;
-  margin: 0 100px;
-  justify-content: space-between;
-  margin-bottom: 80px;
-}
-
-footer div:first-child {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-footer div:first-child img {
-  width: 150px;
-}
-
-footer div:first-child div img {
-  width: 45px;
-  height: 45px;
-  margin-right: 20px;
-}
-
-footer div:first-child p {
-  width: 323px;
-  font-weight: 400;
-  font-size: 20px;
-}
-
-/* designing the footer links */
-.footer-links {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  gap: 120px;
-}
-
-.footer-links-content {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer-links-content ul li a {
-  color: black;
-}
-
-.footer-links-content ul li:first-child {
-  font-weight: 700;
-  font-size: 20px;
-}
-
-.footer-links-content ul li{
-    margin-bottom: 25px;
+.footer-right ul li:first-of-type a{
+    font-size: 20px;
+    font-weight: 700;
 }
